--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Áno</string>
   <string name="no">Nie</string>
   <string name="delete">Zmazať</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nová správa</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">Signal sa aktualizuje…</string>
   <!--ApplicationPreferencesActivity-->
@@ -461,7 +459,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Označte ťuknutím</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Pridaj popis…</string>
+  <string name="MediaSendActivity_add_a_caption">Pridať popis…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Položka bola odstránená, lebo prekračovala limit na veľkosť</string>
   <string name="MediaSendActivity_camera_unavailable">Kamera je nedostupná.</string>
   <string name="MediaSendActivity_message_to_s">Správa pre %s</string>
@@ -1343,6 +1341,11 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="trimmer__deleting">Mazanie</string>
   <string name="trimmer__deleting_old_messages">Mažú sa staré správy…</string>
   <string name="trimmer__old_messages_successfully_deleted">Staré správy úspešne vymazané</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">Zrušiť</string>
+  <string name="InsightsDashboardFragment__send">Poslať</string>
+  <string name="FirstInviteReminder__title">Pozvať do Signalu</string>
+  <string name="InsightsReminder__invite">Pozvať</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona prenosu</string>
   <string name="ConversationListFragment_loading">Načítava sa…</string>
@@ -1434,5 +1437,6 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="prompt_passphrase_activity__tap_to_unlock">ŤUKNUTÍM ODOMKNITE</string>
   <string name="RegistrationLockDialog_reminder">Pripomienka:</string>
   <string name="recipient_preferences__about">Informácie</string>
+  <string name="Recipient_unknown">Neznáme</string>
   <!--EOF-->
 </resources>
