--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">ใช่</string>
   <string name="no">ไม่</string>
   <string name="delete">ลบ</string>
@@ -1125,6 +1124,11 @@
   <string name="trimmer__deleting">กำลังลบ</string>
   <string name="trimmer__deleting_old_messages">กำลังลบข้อความเก่า…</string>
   <string name="trimmer__old_messages_successfully_deleted">ลบข้อความเก่าสำเร็จ</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">ยกเลิก</string>
+  <string name="InsightsDashboardFragment__send">ส่ง</string>
+  <string name="FirstInviteReminder__title">เชิญมาใช้ Signal</string>
+  <string name="InsightsReminder__invite">เชิญ</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">ไอคอนขนส่ง</string>
   <string name="ConversationListFragment_loading">กำลังโหลด…</string>
@@ -1213,5 +1217,6 @@
   <string name="prompt_passphrase_activity__tap_to_unlock">แตะเพื่อปลดล็อก</string>
   <string name="RegistrationLockDialog_reminder">เตือนความจำ:</string>
   <string name="recipient_preferences__about">เกี่ยวกับ</string>
+  <string name="Recipient_unknown">ไม่ทราบ</string>
   <!--EOF-->
 </resources>
