--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">نعم</string>
   <string name="no">لا</string>
   <string name="delete">حذف</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">رسالة جديدة</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">/+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">يُحدّث سغنال…</string>
   <!--ApplicationPreferencesActivity-->
@@ -75,7 +73,7 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">يحتاج Signal إلى إذن الموقع من أجل إرفاق الموقع الجغرافي ولكن تم إيقاف الإذن على نحو دائم، رجاء زيارة إعدادات التطبيق ثم \"الأذونات\"، ثم تفعيل \"الموقع\".</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">يحتاج Signal إلى إذن الكاميرا من أجل التقاط صور ولكن تم إيقاف الإذن على نحو دائم، رجاء زيارة إعدادات التطبيق ثم \"الأذونات\"، ثم تفعيل \"الكاميرا\".</string>
   <!--AttachmentUploadJob-->
-  <string name="AttachmentUploadJob_uploading_media">جاري رفع الميديا</string>
+  <string name="AttachmentUploadJob_uploading_media">جاري رفع الميديا…</string>
   <string name="AttachmentUploadJob_compressing_video_start">جاري ضغط الفيديو…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">خطأ في تشغيل الصوت!</string>
@@ -423,7 +421,7 @@
   <string name="InviteActivity_share">شارك</string>
   <string name="InviteActivity_choose_contacts">اختر جهات الاتصال</string>
   <string name="InviteActivity_cancel">إلغاء</string>
-  <string name="InviteActivity_sending">ارسال…</string>
+  <string name="InviteActivity_sending">إرسال…</string>
   <string name="InviteActivity_heart_content_description">قلب</string>
   <string name="InviteActivity_invitations_sent">تم إرسال الدعوات!</string>
   <string name="InviteActivity_invite_to_signal">الدعوة إلى Signal</string>
@@ -493,7 +491,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">أنقر للتحديد</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">إضافة شرح…</string>
+  <string name="MediaSendActivity_add_a_caption">إضافة تعليق…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">تم حذف عنصر لإنه تجاوز حد الحجم المسموح</string>
   <string name="MediaSendActivity_camera_unavailable">الكاميرا غير متاحة.</string>
   <string name="MediaSendActivity_message_to_s">رسالة إلى %s</string>
@@ -1012,7 +1010,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">عرض</string>
   <string name="message_recipients_list_item__resend">إعادة الإرسال</string>
-  <string name="message_recipients_list_item__resending">إعادة الارسال</string>
+  <string name="message_recipients_list_item__resending">إعادة الارسال…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="zero">%1$s انضموا إلى المجموعة.</item>
@@ -1066,7 +1064,7 @@
   <string name="unknown_sender_view__add_to_contacts">أضف إلى قائمة جهات الإتصال</string>
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__tap_to_scan">المس للمسح</string>
-  <string name="verify_display_fragment__loading">جاري التحميل …</string>
+  <string name="verify_display_fragment__loading">قيد التحميل…</string>
   <string name="verify_display_fragment__verified"> تم التحقق منه</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">شارك رقم الأمان</string>
@@ -1341,10 +1339,15 @@
   <string name="trimmer__deleting">جارٍ الحذف</string>
   <string name="trimmer__deleting_old_messages">جار حذف الرسائل القديمة…</string>
   <string name="trimmer__old_messages_successfully_deleted">تم حذف الرسائل القديمة بنجاح</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">إلغاء</string>
+  <string name="InsightsDashboardFragment__send">أرسل</string>
+  <string name="FirstInviteReminder__title">ادعُ إلى Signal</string>
+  <string name="InsightsReminder__invite">توجيه دعوة</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">أيقونة النقل.</string>
-  <string name="ConversationListFragment_loading">جاري التحميل …</string>
-  <string name="CallNotificationBuilder_connecting">الاتصال جارِ…</string>
+  <string name="ConversationListFragment_loading">قيد التحميل…</string>
+  <string name="CallNotificationBuilder_connecting">جار الربط…</string>
   <string name="Permissions_permission_required">منح إحدى الأذونات مطلوب</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">يحتاج Signal إلى إذن الرسائل القصيرة من أجل إرسال SMS ولكن تم إيقاف الإذن على نحو دائم، رجاء زيارة إعدادات التطبيق ثم \"الأذونات\"، ثم تفعيل \"الرسائل القصيرة SMS\".</string>
   <string name="Permissions_continue">استمر</string>
@@ -1431,5 +1434,6 @@
   <string name="prompt_passphrase_activity__tap_to_unlock">أنقُر لفك القُفل</string>
   <string name="RegistrationLockDialog_reminder">تذكير :</string>
   <string name="recipient_preferences__about">حول</string>
+  <string name="Recipient_unknown">مجهول</string>
   <!--EOF-->
 </resources>
