--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Iawn</string>
   <string name="no">Na</string>
   <string name="delete">Dileu</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Neges newydd</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">Mae Signal yn diweddaru…</string>
   <!--ApplicationPreferencesActivity-->
@@ -34,7 +32,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Bydd hyn yn datgloi Signal a hysbysiadau negeseuon yn barhaol.</string>
   <string name="ApplicationPreferencesActivity_disable">Analluogi</string>
   <string name="ApplicationPreferencesActivity_unregistering">Datgofrestru</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Datgofrestru o negeseuon a galwadau Signal…</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Dadgofrestru o negeseuon a galwadau Signal…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Analluogi negeseuon a galwadau Signal?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Analluogi negeseuon a galwadau Signal drwy ddadgofrestru o\'r gweinydd. Bydd angen i chi ailgofrestru eich rhif ffón i\'w defnyddio eto\'n y dyfodol.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Gwall cysylltu â\'r gweinydd!</string>
@@ -319,7 +317,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Drwy ddatgysylltu\'r ddyfais hon, ni fydd yn gallu anfon neu dderbyn negeseuon.</string>
   <string name="DeviceListActivity_network_connection_failed">Methodd cysylltiad rhwydwaith</string>
   <string name="DeviceListActivity_try_again">Ceisio eto</string>
-  <string name="DeviceListActivity_unlinking_device">Datgysylltu dyfais</string>
+  <string name="DeviceListActivity_unlinking_device">Datgysylltu dyfais…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Datgysylltu dyfais</string>
   <string name="DeviceListActivity_network_failed">Methodd y rhwydwaith!</string>
   <!--DeviceListItem-->
@@ -469,7 +467,7 @@ Send neges heb ei ddiogelu?</string>
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Tapio i ddewis</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Ychwanegu neges…</string>
+  <string name="MediaSendActivity_add_a_caption">Ychwanegu pennawd…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Cafodd eitem ei thynnu gan ei bod yn fwy na\'r maint mwyaf</string>
   <string name="MediaSendActivity_camera_unavailable">Camera ddim ar gael</string>
   <string name="MediaSendActivity_message_to_s">Neges i %s</string>
@@ -703,7 +701,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="UnknownSenderView_block_s">Rhwystro %s</string>
   <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Ni fydd yn bosib i gysylltiadau wedi\'u rhwystro anfon negeseuon atoch neu eich ffonio.</string>
   <string name="UnknownSenderView_block">Rhwystro</string>
-  <string name="UnknownSenderView_share_profile_with_s">Rhannu proffil gyda %?</string>
+  <string name="UnknownSenderView_share_profile_with_s">Rhannu proffil gyda %s?</string>
   <string name="UnknownSenderView_the_easiest_way_to_share_your_profile_information_is_to_add_the_sender_to_your_contacts">Y ffordd hawsaf o rannu eich manylion proffil yw ychwanegu\'r anfonwr i\'ch cysylltiadau. Os nad ydych yn dymuno, gallwch barhau i rannu\'ch manylion proffil fel hyn.</string>
   <string name="UnknownSenderView_share_profile">Rhannu proffil</string>
   <!--UntrustedSendDialog-->
@@ -910,7 +908,7 @@ Send neges heb ei ddiogelu?</string>
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Sgrolio i\'r gwaelod</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Llwytho gwledydd…</string>
+  <string name="country_selection_fragment__loading_countries">Yn llwytho gwledydd…</string>
   <string name="country_selection_fragment__search">Chwilio</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Sganiwch god QR y ddyfais i\'w chysylltu</string>
@@ -962,15 +960,15 @@ Send neges heb ei ddiogelu?</string>
   </plurals>
   <string name="expiration_weeks_abbreviated">%dw</string>
   <!--unverified safety numbers-->
-  <string name="IdentityUtil_unverified_banner_one">Mae\'ch rhif diogelwch gyda %1$s wedi newid ac nid yw wedi\'i dilysu bellach.</string>
+  <string name="IdentityUtil_unverified_banner_one">Mae\'ch rhif diogelwch gyda %s wedi newid ac nid yw wedi\'i dilysu bellach.</string>
   <string name="IdentityUtil_unverified_banner_two">Nid yw eich rhif diogelwch gyda %1$s a %2$s wedi\'i dilysu bellach</string>
   <string name="IdentityUtil_unverified_banner_many">Nid yw eich rhifau diogelwch gyda %1$s, %2$s, a %3$s bellach yn cael eu gwirio</string>
   <string name="IdentityUtil_unverified_dialog_one">Mae\'ch rhif diogelwch gyda %1$s wedi newid ac nid yw wedi\'i dilysu bellach. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod %1$s wedi ail-osod Signal.</string>
   <string name="IdentityUtil_unverified_dialog_two">Mae\'ch rhifau diogelwch gyda %1$s a %2$s wedi\'i dilysu bellach. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod nhw wedi ail-osod Signal.</string>
   <string name="IdentityUtil_unverified_dialog_many">Mae\'ch rhifau diogelwch gyda %1$s, %2$s, a %3$s wedi\'i dilysi bellach. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod nhw wedi ail-osod Signal.</string>
   <string name="IdentityUtil_untrusted_dialog_one">Mae\'ch rhif diogelwch gyda %1$s wedi newid yn ddiweddar.</string>
-  <string name="IdentityUtil_untrusted_dialog_two">Mae\'ch rhif diogelwch gyda %1$s wedi newid yn ddiweddar.</string>
-  <string name="IdentityUtil_untrusted_dialog_many">Mae\'ch rhif diogelwch gyda %1$s a %3$s wedi newid.</string>
+  <string name="IdentityUtil_untrusted_dialog_two">Mae\'ch rhif diogelwch gyda %1$s a %2$s wedi\'i newid yn ddiweddar.</string>
+  <string name="IdentityUtil_untrusted_dialog_many">Mae\'ch rhif diogelwch gyda %1$s, %2$s a %3$s wedi\'i newid.</string>
   <plurals name="identity_others">
     <item quantity="one">%d arall</item>
     <item quantity="two">%d arall</item>
@@ -1357,10 +1355,15 @@ Send neges heb ei ddiogelu?</string>
   <string name="trimmer__deleting">Wrthi\'n dileu</string>
   <string name="trimmer__deleting_old_messages">Dileu hen negeseuon…</string>
   <string name="trimmer__old_messages_successfully_deleted">Dilëwyd hen negeseuon yn llwyddiannus</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">Diddymu</string>
+  <string name="InsightsDashboardFragment__send">Anfon</string>
+  <string name="FirstInviteReminder__title">Gwahodd i Signal</string>
+  <string name="InsightsReminder__invite">Gwahodd</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Eicon trafnidiaeth</string>
   <string name="ConversationListFragment_loading">Llwytho…</string>
-  <string name="CallNotificationBuilder_connecting">Wrthi\'n cysylltu…</string>
+  <string name="CallNotificationBuilder_connecting">Yn cysylltu</string>
   <string name="Permissions_permission_required">Angen caniatâd</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Mae ar Signal angen caniatâd Camera er mwyn anfon SMS, ond fe\'i rwystrwyd yn barhaol. Ewch i ddewislen gosodiadau\'r ap, dewis "Caniatâd", a galluogi "SMS".</string>
   <string name="Permissions_continue">Parhau</string>
@@ -1451,5 +1454,6 @@ Send neges heb ei ddiogelu?</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">TAPIO I DDATGLOI</string>
   <string name="RegistrationLockDialog_reminder">Atgoffa:</string>
   <string name="recipient_preferences__about">Ynghylch</string>
+  <string name="Recipient_unknown">Anhysbys</string>
   <!--EOF-->
 </resources>
