--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Ja</string>
   <string name="no">Nej</string>
   <string name="delete">Slet</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Ny besked</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">Signal opdaterer…</string>
   <!--ApplicationPreferencesActivity-->
@@ -30,7 +28,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Dette vil permanent låse op for Signal og besked notifikationer</string>
   <string name="ApplicationPreferencesActivity_disable">Deaktivér</string>
   <string name="ApplicationPreferencesActivity_unregistering">Afmeld</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Afmelder Signalbeskeder og -opkald…</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Afregistrerer fra Signal beskeder og opkald…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Deaktivér Signalbeskeder og -opkald?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Deaktivér Signalbeskeder og -opkald fra serveren ved afmelding. Du er nødt til igen at registrere dit telefonnummer, for at bruge det igen i fremtiden</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Fejl ved oprettelse af forbindelse til serveren</string>
@@ -221,7 +219,7 @@
     <item quantity="one">Gemmer vedhæftning…</item>
     <item quantity="other">Gemmer %1$d vedhæftninger til hukommelsen…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Afventer…</string>
+  <string name="ConversationFragment_pending">Sender…</string>
   <string name="ConversationFragment_push">Data (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
@@ -290,7 +288,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Enheden vil ikke længere være i stand til at sende og modtage beskeder, hvis forbindelsen fjernes</string>
   <string name="DeviceListActivity_network_connection_failed">Forbindelse til netværk fejlede</string>
   <string name="DeviceListActivity_try_again">Prøv igen</string>
-  <string name="DeviceListActivity_unlinking_device">Frakobler enhed…</string>
+  <string name="DeviceListActivity_unlinking_device">Fjerner forbindelse til enhed…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Frakobler enhed</string>
   <string name="DeviceListActivity_network_failed">Netværksfejl!</string>
   <!--DeviceListItem-->
@@ -330,7 +328,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Du kan når som helst aktivere eller deaktivere funktionaliteten, under Signal, Indstillinger (Privatliv -&gt; Send link eksempelvisning)</string>
   <string name="ExperienceUpgradeActivity_got_it">Modtaget</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Modtager en meddelelse…</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Modtager besked…</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Permanent fejl ved Signal kommunikationen!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal var ude af stand til at registrere med Google Play Services. Signalbeskeder og -opkald blev deaktiveret. Prøv venligst at registrere igen i Indstillinger -&gt; Advanceret</string>
@@ -353,7 +351,7 @@
   <string name="GroupCreateActivity_creating_group">Opretter %1$s…</string>
   <string name="GroupCreateActivity_updating_group">Opdaterer %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">Kunne ikke tilføje, da %1$s ikke bruger Signal</string>
-  <string name="GroupCreateActivity_loading_group_details">Indlæser gruppedetaljer…</string>
+  <string name="GroupCreateActivity_loading_group_details">Loader detaljer for gruppe…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Du er allerede med i gruppen</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Del dit profilnavn og billede med gruppen?</string>
@@ -482,7 +480,7 @@
         \n• Send beskeder i dit navn
     </string>
   <string name="DeviceProvisioningActivity_content_progress_title">Tilføjer enhed</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Tilføjer ny enhed…</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Forbinder ny enhed…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Enhed tilføjet!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Ingen enhed fundet</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Netværksfejl</string>
@@ -858,7 +856,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">Kontaktbillede</string>
   <!--audio_view-->
-  <string name="audio_view__play_pause_accessibility_description">Afspil … Pause</string>
+  <string name="audio_view__play_pause_accessibility_description">Play … Pause</string>
   <string name="audio_view__download_accessibility_description">Download</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">Lyd</string>
@@ -872,7 +870,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <!--conversation_fragment-->
   <string name="conversation_fragment__scroll_to_the_bottom_content_description">Scroll til bunden</string>
   <!--country_selection_fragment-->
-  <string name="country_selection_fragment__loading_countries">Indlæser lande…</string>
+  <string name="country_selection_fragment__loading_countries">Loader lande…</string>
   <string name="country_selection_fragment__search">Søg</string>
   <!--device_add_fragment-->
   <string name="device_add_fragment__scan_the_qr_code_displayed_on_the_device_to_link">Skan QR-koden der vises på enheden, for at forbinde</string>
@@ -1020,7 +1018,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Hvis du ønsker at validere sikkerheden af din kryptering med %s, skal du sammenligne nummeret herover med nummeret på enheden. Alternativt kan du skanne koden på deres enhed, eller bede dem om at skanne din kode <a href="https://signal.org/redirect/safety-numbers">Vis mere</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Tap for at skanne</string>
-  <string name="verify_display_fragment__loading">Indlæser…</string>
+  <string name="verify_display_fragment__loading">Henter…</string>
   <string name="verify_display_fragment__verified">Verificeret</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Del sikkerhedsnummer</string>
@@ -1297,9 +1295,14 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="trimmer__deleting">Sletter</string>
   <string name="trimmer__deleting_old_messages">Sletter gamle beskeder…</string>
   <string name="trimmer__old_messages_successfully_deleted">Gamle beskeder slettet</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">Annuller</string>
+  <string name="InsightsDashboardFragment__send">Send</string>
+  <string name="FirstInviteReminder__title">Invitér til Signal</string>
+  <string name="InsightsReminder__invite">Invitér kontakt</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Transport ikon</string>
-  <string name="ConversationListFragment_loading">Indlæser…</string>
+  <string name="ConversationListFragment_loading">Henter…</string>
   <string name="CallNotificationBuilder_connecting">Forbinder…</string>
   <string name="Permissions_permission_required">Tilladelse krævet</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal kræver tilladelse til at tilgå dine SMS\'er for at kunne sende beskeder, hvilket det er blevet nægtet. Gå venligst via appens menu til Indstillinger, vælg \"Tilladelser\" og tilvælg \"SMS\"  </string>
@@ -1392,5 +1395,6 @@ Der er %d dage tilbage</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">TAP FOR AT LÅSE OP</string>
   <string name="RegistrationLockDialog_reminder">Påmindelse:</string>
   <string name="recipient_preferences__about">Om</string>
+  <string name="Recipient_unknown">Ukendt</string>
   <!--EOF-->
 </resources>
