--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Ναι</string>
   <string name="no">Όχι</string>
   <string name="delete">Διαγραφή</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Νέο μήνυμα</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Αυτή τη στιγμή: %s</string>
@@ -356,7 +354,7 @@
   <string name="InviteActivity_share">Διαμοιρασμός</string>
   <string name="InviteActivity_choose_contacts">Επιλογή επαφών</string>
   <string name="InviteActivity_cancel">Ακύρωση</string>
-  <string name="InviteActivity_sending">Αποστολή…</string>
+  <string name="InviteActivity_sending">Αποστέλλεται…</string>
   <string name="InviteActivity_heart_content_description">Καρδιά</string>
   <string name="InviteActivity_invitations_sent">Οι προσκλήσεις στάλθηκαν!</string>
   <string name="InviteActivity_invite_to_signal">Πρόσκληση στο Signal</string>
@@ -989,7 +987,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Αν θέλετε να επιβεβαιώσετε την ασφάλεια της κρυπτογράφησης με τον/την %s, συγκρίνετε τον παραπάνω αριθμό με τον αριθμό στη συσκευή του/της. Εναλλακτικά, μπορείτε να σκανάρετε τον κωδικο στο τηλέφωνό του/της, ή να του/της ζητήσετε να σκανάρει τον δικό σας κωδικό. <a href="https://signal.org/redirect/safety-numbers">Μάθετε περισσότερα.</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Πατήστε για σκανάρισμα</string>
-  <string name="verify_display_fragment__loading">Φορτώνει…</string>
+  <string name="verify_display_fragment__loading">Φόρτωση…</string>
   <string name="verify_display_fragment__verified">Επιβεβαιωμένο</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Μοιραστείτε τον αριθμό ασφαλείας</string>
@@ -1265,10 +1263,15 @@
   <string name="trimmer__deleting">Διαγραφή</string>
   <string name="trimmer__deleting_old_messages">Τα παλία μηνύματα διαγράφονται…</string>
   <string name="trimmer__old_messages_successfully_deleted">Τα παλιά μηνύματα διαγράφτηκαν επιτυχώς</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">Ακύρωση</string>
+  <string name="InsightsDashboardFragment__send">Αποστολή</string>
+  <string name="FirstInviteReminder__title">Πρόσκληση στο Signal</string>
+  <string name="InsightsReminder__invite">Πρόσκληση</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Μεταφορά εικονίδιου</string>
-  <string name="ConversationListFragment_loading">Φορτώνει…</string>
-  <string name="CallNotificationBuilder_connecting">Γίνεται σύνδεση…</string>
+  <string name="ConversationListFragment_loading">Φόρτωση…</string>
+  <string name="CallNotificationBuilder_connecting">Συνδέεται…</string>
   <string name="Permissions_permission_required">Χρειάζονται δικαιώματα πρόσβασης</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Το Signal χρειάζεται τα δικαιώματα SMS για να μπορέσουμε να στείλουμε ένα SMS, αλλά αυτά δεν έχουν δοθεί μόνιμα. Παρακαλώ πηγαίνετε στις ρυθμίσεις εφαρμογών, επιλέξτε τα \"Δικαιώματα\", και ενεργοποιήστε τα \"SMS\".</string>
   <string name="Permissions_continue">Συνέχεια</string>
@@ -1356,5 +1359,6 @@
   <string name="prompt_passphrase_activity__tap_to_unlock">ΠΑΤΑ ΓΙΑ ΞΕΚΛΕΙΔΩΜΑ</string>
   <string name="RegistrationLockDialog_reminder">Υπενθύμιση:</string>
   <string name="recipient_preferences__about">Πληροφορίες</string>
+  <string name="Recipient_unknown">Άγνωστο</string>
   <!--EOF-->
 </resources>
