--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1,18 +1,16 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Sí</string>
   <string name="no">No</string>
   <string name="delete">Eliminar</string>
-  <string name="please_wait">Por favor, espera …</string>
+  <string name="please_wait">Espera, por favor …</string>
   <string name="save">Guardar</string>
   <string name="note_to_self">Notas personales</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nuevo mensaje</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
-  <string name="ApplicationMigrationActivity__signal_is_updating">Signal está actualizándose …</string>
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal se está actualizando …</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Actualmente: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">¡Todavía no has fijado una clave de acceso!</string>
@@ -30,7 +28,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Esto desbloqueará permanentemente Signal y las notificaciones por mensajes.</string>
   <string name="ApplicationPreferencesActivity_disable">Desactivar</string>
   <string name="ApplicationPreferencesActivity_unregistering">Desregistrándose</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Borrando cuenta de Signal …</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Dándose de baja de mensajes y llamadas de Signal … </string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">¿Desactivar mensajes y llamadas de Signal?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Esto desactivará los mensajes de Signal eliminando tu número del servidor. Necesitarás volver a registrar tu número de teléfono para usar Signal de nuevo en el futuro.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">¡Fallo al conectarse al servidor!</string>
@@ -63,7 +61,7 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal necesita acceso a tu posición para adjuntar la información en tus chats. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Ubicación».</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal necesita acceso a la cámara para tomar fotos y verificar las cifras de seguridad de tus chats. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Cámara».</string>
   <!--AttachmentUploadJob-->
-  <string name="AttachmentUploadJob_uploading_media">Subiendo archivo …</string>
+  <string name="AttachmentUploadJob_uploading_media">Cargando archivo multimedia …</string>
   <string name="AttachmentUploadJob_compressing_video_start">Comprimiendo vídeo …</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">¡Fallo al reproducir sonido!</string>
@@ -178,7 +176,7 @@
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Signal necesita acceso a la cámara para tomar fotos o vídeos. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Cámara».</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Signal necesita acceder a la cámara para tomar fotos o vídeo.</string>
   <string name="ConversationActivity_enable_the_microphone_permission_to_capture_videos_with_sound">Activa el acceso al micrófono para grabar vídeos con sonido.</string>
-  <string name="ConversationActivity_signal_needs_the_recording_permissions_to_capture_video">Signal necesita el micrófono para grabar vídeos, pero se le ha denegado el acceso. Ve a los ajustes se la aplicación, selecciona Permisos y activa Micrófono y Cámara.</string>
+  <string name="ConversationActivity_signal_needs_the_recording_permissions_to_capture_video">Signal necesita el micrófono para grabar vídeos, pero no tiene acceso. Ve a los ajustes se la aplicación, selecciona Permisos y activa Micrófono y Cámara.</string>
   <string name="ConversationActivity_signal_needs_recording_permissions_to_capture_video">Signal necesita acceso al micrófono para grabar vídeos.</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
   <string name="ConversationActivity_signal_cannot_sent_sms_mms_messages_because_it_is_not_your_default_sms_app">Signal no puede enviar SMS/MMS ya que no es la aplicación configurada por defecto. ¿Deseas cambiar la configuración de Android para que Signal sea la aplicación por defecto para SMS?</string>
@@ -217,15 +215,15 @@
     <item quantity="other">Guardando %1$d adjuntos</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Guardando adjunto en el teléfono …</item>
-    <item quantity="other">Guardando %1$d adjuntos en el teléfono …</item>
+    <item quantity="one">Guardando adjunto …</item>
+    <item quantity="other">Guardando %1$d adjuntos …</item>
   </plurals>
-  <string name="ConversationFragment_pending">Procesando …</string>
+  <string name="ConversationFragment_pending">Pendiente …</string>
   <string name="ConversationFragment_push">Datos (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Eliminar</string>
-  <string name="ConversationFragment_deleting_messages">Eliminando mensajes …</string>
+  <string name="ConversationFragment_deleting_messages">Borrando mensajes …</string>
   <string name="ConversationFragment_quoted_message_not_found">No se encuentra el mensaje original </string>
   <string name="ConversationFragment_quoted_message_no_longer_available">El mensaje original ya no está disponible</string>
   <string name="ConversationFragment_failed_to_open_message">Fallo al abrir mensaje</string>
@@ -244,7 +242,7 @@
     <item quantity="other">Esto eliminará permanentemente los %1$d chats seleccionados.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Eliminar</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Borrando chats seleccionados …</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Eliminando chats seleccionados …</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Chat archivado</item>
     <item quantity="other">%d chats archivados</item>
@@ -329,7 +327,7 @@
   <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Puedes desactivar o activar esta opción en cualquier momento desde el menú de ajustes de Signal (Privacidad &gt; Enviar previsualizaciones).</string>
   <string name="ExperienceUpgradeActivity_got_it">Entendido</string>
   <!--GcmBroadcastReceiver-->
-  <string name="GcmBroadcastReceiver_retrieving_a_message">Recuperando un mensaje…</string>
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Recuperando mensaje …</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">¡Fallo permanente de comunicación de Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal fué incapaz de registrarse con Google Play Services. Los mensajes y llamadas de Signal han sido desactivados, por favor, intenta registrarte otra vez en Configuración &gt; Avanzado.</string>
@@ -352,7 +350,7 @@
   <string name="GroupCreateActivity_creating_group">Creando %1$s …</string>
   <string name="GroupCreateActivity_updating_group">Actualizando %1$s …</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">No se ha podido agregar a %1$s porque no es usuario de Signal.</string>
-  <string name="GroupCreateActivity_loading_group_details">Cargando detalles del grupo…</string>
+  <string name="GroupCreateActivity_loading_group_details">Cargando detalles del grupo …</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Ya eres miembro del grupo.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">¿Deseas compartir tu nombre y foto de perfil con este grupo?</string>
@@ -385,7 +383,7 @@
   <string name="InviteActivity_no_app_to_share_to">Parece que no hay ninguna aplicación con la que compartir.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Los verdaderos amigos no dejan que sus amigos hablen sin cifrar.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Trabajando en segundo plano …</string>
+  <string name="Job_working_in_the_background">Procesando en segundo plano …</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Fallo al enviar</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nuevas cifras de seguridad</string>
@@ -409,7 +407,7 @@
     <item quantity="other">Esto eliminará permanentemente los %1$d mensajes seleccionados.</item>
   </plurals>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Eliminar</string>
-  <string name="MediaOverviewActivity_Media_delete_progress_message">Eliminando mensajes …</string>
+  <string name="MediaOverviewActivity_Media_delete_progress_message">Borrando mensajes …</string>
   <string name="MediaOverviewActivity_Documents">Documentos</string>
   <string name="MediaOverviewActivity_Select_all">Seleccionar todo</string>
   <string name="MediaOverviewActivity_collecting_attachments">Recopilando adjuntos …</string>
@@ -431,7 +429,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Toca para seleccionar</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Añadir explicación …</string>
+  <string name="MediaSendActivity_add_a_caption">Añade una explicación …</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Se eliminó un objeto ya que excedía el límite de tamaño</string>
   <string name="MediaSendActivity_camera_unavailable">Cámara no disponible.</string>
   <string name="MediaSendActivity_message_to_s">Mensaje para %s</string>
@@ -1287,6 +1285,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="reminder_header_share_text">Cuantos más amigos usen Signal, mejor será.</string>
   <string name="reminder_header_service_outage_text">Signal está experimentando dificultades técnicas. Estamos trabajando duro para restablecer el servicio lo antes posible.</string>
   <string name="reminder_header_the_latest_signal_features_wont_work">Las nuevas prestaciones de Signal no funcionan en esta versión de Android. Actualiza este dispositivo para usar todo el potencial de Signal.</string>
+  <string name="reminder_header_progress">%1$d%%</string>
   <!--media_preview-->
   <string name="media_preview__save_title">Guardar</string>
   <string name="media_preview__forward_title">Avanzar</string>
@@ -1302,6 +1301,32 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="trimmer__deleting">Eliminar</string>
   <string name="trimmer__deleting_old_messages">Eliminando mensajes antiguos …</string>
   <string name="trimmer__old_messages_successfully_deleted">Mensajes antiguos eliminados con éxito</string>
+  <!--Insights-->
+  <string name="Insights__percent">%</string>
+  <string name="Insights__title">Estadísticas</string>
+  <string name="InsightsDashboardFragment__title">Estadísticas</string>
+  <string name="InsightsDashboardFragment__tagline">%1$d%% de tus mensajes enviados en los últimos 7 días fueron cifrados con el protocolo de Signal.</string>
+  <string name="InsightsDashboardFragment__boost_your_signal">Mejora tu Signatura</string>
+  <string name="InsightsDashboardFragment__100_title">Tu Signatura es sólida</string>
+  <string name="InsightsDashboardFragment__no_signal_yet">Sin Signatura (todavía)</string>
+  <string name="InsightsDashboardFragment__youre_just_getting_started">Todavía estás comenzando. Las estadísticas se mostrarán tras enviar algunos mensajes.</string>
+  <string name="InsightsDashboardFragment__start_a_conversation">Comenza un chat</string>
+  <string name="InsightsDashboardFragment__100_description">La tecnología de Signal proteje automáticamente tu intimidad en todos los mensajes que envías.</string>
+  <string name="InsightsDashboardFragment__invite_your_contacts">Comenza a comunicarte de manera segura con las características de Signal que van más allá de SMS sin cifrar e invita contactos a usar Signal contigo.</string>
+  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Esta cifra se ha generado en este dispositivo y sólo tú puedes verla. No se envía a ningún servidor.</string>
+  <string name="InsightsDashboardFragment__encrypted_messages">Mensajes cifrados</string>
+  <string name="InsightsDashboardFragment__cancel">Cancelar</string>
+  <string name="InsightsDashboardFragment__send">Enviar</string>
+  <string name="InsightsDashboardFragment__not_using_signal_yet">Todavía no usas Signal</string>
+  <string name="InsightsModalFragment__title">Presentando estadísticas</string>
+  <string name="InsightsModalFragment__description">Descubre cuántos de tus mensajes se han enviado de manera segura e invita a tus contaqctos a aumentar tu porcentaje de mensajes de Signal.</string>
+  <string name="InsightsModalFragment__view_insights">Ver estadísticas</string>
+  <string name="FirstInviteReminder__title">Invitar a Signal</string>
+  <string name="FirstInviteReminder__description">Puedes aumentar el número de mensajes cifrados que envías a %1$d%%</string>
+  <string name="SecondInviteReminder__title">Mejora con Signal</string>
+  <string name="SecondInviteReminder__description">Invitar a %1$s</string>
+  <string name="InsightsReminder__view_insights">Ver estadísticas</string>
+  <string name="InsightsReminder__invite">Invitar</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icono de transporte</string>
   <string name="ConversationListFragment_loading">Cargando …</string>
@@ -1396,5 +1421,6 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="prompt_passphrase_activity__tap_to_unlock">TOCA PARA DESBLOQUEAR</string>
   <string name="RegistrationLockDialog_reminder">Recordatorio:</string>
   <string name="recipient_preferences__about">Info</string>
+  <string name="Recipient_unknown">Desconocido</string>
   <!--EOF-->
 </resources>
