--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Tak</string>
   <string name="no">Nie</string>
   <string name="delete">Usuń</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nowa wiadomość</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">Aktualizacja Signal…</string>
   <!--ApplicationPreferencesActivity-->
@@ -34,7 +32,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">To spowoduje odblokowanie na stałe aplikacji Signal i powiadomień wiadomości.</string>
   <string name="ApplicationPreferencesActivity_disable">Wyłącz</string>
   <string name="ApplicationPreferencesActivity_unregistering">Wyrejestrowanie </string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Trwa wyrejestrowanie z Signal…</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Wyrejestrowywanie z usług wiadomości i połączeń Signal…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Wyłączyć wiadomości i połączenia Signal?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Wyłącz wiadomości i połączenia telefoniczne Signal poprzez wyrejestrowanie z serwera. Będziesz musiał(a) ponownie zarejestrować swój numer telefonu, jeśli będziesz chciał(a) go używać w przyszłości.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Błąd połączenia z serwerem!</string>
@@ -235,10 +233,10 @@
     <item quantity="other">Zapisywanie załączników</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Zapisywanie załącznika na dysku</item>
-    <item quantity="few">Zapisywanie %1$d załączników na dysku</item>
-    <item quantity="many">Zapisywanie %1$d załączników na dysku</item>
-    <item quantity="other">Zapisywanie %1$d załączników na dysku</item>
+    <item quantity="one">Zapisywanie załącznika na dysku…</item>
+    <item quantity="few">Zapisywanie %1$d załączników na dysku…</item>
+    <item quantity="many">Zapisywanie %1$d załączników na dysku…</item>
+    <item quantity="other">Zapisywanie %1$d załączników na dysku…</item>
   </plurals>
   <string name="ConversationFragment_pending">Oczekiwanie…</string>
   <string name="ConversationFragment_push">Dane (Signal)</string>
@@ -317,7 +315,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Wyrejestrowanie tego urządzenia spowoduje, że nie będziesz miał(a) możliwości wysyłania i odbierania wiadomości.</string>
   <string name="DeviceListActivity_network_connection_failed">Błąd połączenia sieciowego</string>
   <string name="DeviceListActivity_try_again">Spróbuj ponownie</string>
-  <string name="DeviceListActivity_unlinking_device">Wyrejestrowywanie urządzenia…</string>
+  <string name="DeviceListActivity_unlinking_device">Odłączanie urządzenia…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Wyrejestrowywanie urządzenia</string>
   <string name="DeviceListActivity_network_failed">Błąd sieci!</string>
   <!--DeviceListItem-->
@@ -467,7 +465,7 @@
   <!--MediaPickerItemFragment-->
   <string name="MediaPickerItemFragment_tap_to_select">Dotknij, aby zaznaczyć</string>
   <!--MediaSendActivity-->
-  <string name="MediaSendActivity_add_a_caption">Dodaj podpis…</string>
+  <string name="MediaSendActivity_add_a_caption">Dodaj opis…</string>
   <string name="MediaSendActivity_an_item_was_removed_because_it_exceeded_the_size_limit">Pozycja została usunięta, ponieważ przekroczyła limit wielkości</string>
   <string name="MediaSendActivity_camera_unavailable">Aparat niedostępny.</string>
   <string name="MediaSendActivity_message_to_s">Wiadomość do %s</string>
@@ -518,7 +516,7 @@
 • Czytać wszystkie Twoje wiadomości
 \n• Wysyłać wiadomości w Twoim imieniu</string>
   <string name="DeviceProvisioningActivity_content_progress_title">Rejestrowanie urządzenia</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">Rejestrowanie nowego urządzenia…</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">Łączenie nowego urządzenia…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">Urządzenie zostało zatwierdzone!</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">Nie znaleziono żadnych urządzeń.</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">Błąd sieci.</string>
@@ -1067,7 +1065,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[Jeśli chcesz zweryfikować bezpieczeństwo szyfrowania end-to-end z %s, porównaj numery bezpieczeństwa na waszych urządzeniach. Możesz również zeskanować lub poprosić o zeskanowanie Twojego kodu. <a href="https://signal.org/redirect/safety-numbers">Dowiedz się więcej</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">Dotknij, aby zeskanować</string>
-  <string name="verify_display_fragment__loading">Ładowanie…</string>
+  <string name="verify_display_fragment__loading">Wczytywanie…</string>
   <string name="verify_display_fragment__verified">Zweryfikowano</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">Udostępnij numer bezpieczeństwa</string>
@@ -1337,6 +1335,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="reminder_header_share_text">Im więcej twoich znajomych używa Signal, tym bardziej staje się on użyteczny.</string>
   <string name="reminder_header_service_outage_text">Signal ma problemy techniczne. Dokładamy wszelkich starań, aby przywrócić usługę tak szybko, jak to możliwe.</string>
   <string name="reminder_header_the_latest_signal_features_wont_work">Najnowsze funkcje Signal nie będą działać na tej wersji Androida. Zaktualizuj urządzenie, aby uzyskać nowe funkcje Signal.</string>
+  <string name="reminder_header_progress">%1$d%%</string>
   <!--media_preview-->
   <string name="media_preview__save_title">Zapisz</string>
   <string name="media_preview__forward_title">Przekaż dalej</string>
@@ -1352,9 +1351,31 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="trimmer__deleting">Usuwanie</string>
   <string name="trimmer__deleting_old_messages">Usuwanie starych wiadomości…</string>
   <string name="trimmer__old_messages_successfully_deleted">Stare wiadomości zostały pomyślnie usunięte</string>
+  <!--Insights-->
+  <string name="Insights__percent">%</string>
+  <string name="Insights__title">Statystyki</string>
+  <string name="InsightsDashboardFragment__title">Statystyki</string>
+  <string name="InsightsDashboardFragment__tagline">%1$d%% Twoich wiadomości wysyłanych w ciągu ostatnich 7 dni zostało zaszyfrowanych end-to-end za pomocą protokołu Signal.</string>
+  <string name="InsightsDashboardFragment__youre_just_getting_started">Dopiero zaczynasz. Statystyki zostaną wyświetlone, gdy wyślesz kilka wiadomości.</string>
+  <string name="InsightsDashboardFragment__start_a_conversation">Rozpocznij rozmowę</string>
+  <string name="InsightsDashboardFragment__100_description">Zaawansowana technologia ochrony prywatności Signal automatycznie zabezpieczyła wszystkie Twoje ostatnie wiadomości wychodzące.</string>
+  <string name="InsightsDashboardFragment__invite_your_contacts">Rozpocznij bezpieczną komunikację i włącz nowe funkcje, które wykraczają poza ograniczenia niezaszyfrowanych wiadomości SMS, zapraszając więcej kontaktów do przyłączenia się do Signal.</string>
+  <string name="InsightsDashboardFragment__this_stat_was_generated_locally">Ta statystyka została wygenerowana lokalnie na Twoim urządzeniu i jest dostępna tylko dla Ciebie. Nie są one nigdzie nigdy przesyłane.</string>
+  <string name="InsightsDashboardFragment__encrypted_messages">Zaszyfrowane wiadomości</string>
+  <string name="InsightsDashboardFragment__cancel">Anuluj</string>
+  <string name="InsightsDashboardFragment__send">Wyślij</string>
+  <string name="InsightsDashboardFragment__not_using_signal_yet">Nie korzystasz jeszcze z Signal</string>
+  <string name="InsightsModalFragment__title">Przedstawiamy statystyki</string>
+  <string name="InsightsModalFragment__description">Dowiedz się, ile wiadomości wychodzących zostało przesłanych bezpiecznie, a następnie szybko zaproś nowe kontakty, by zwiększyć procent wiadomości szyfrowanych przez Signal.</string>
+  <string name="InsightsModalFragment__view_insights">Wyświetl statystyki</string>
+  <string name="FirstInviteReminder__title">Zaproś do Signal</string>
+  <string name="FirstInviteReminder__description">Możesz zwiększyć liczbę wysyłanych, zaszyfrowanych wiadomości o %1$d%%</string>
+  <string name="SecondInviteReminder__description">Zaproś %1$s</string>
+  <string name="InsightsReminder__view_insights">Wyświetl statystyki</string>
+  <string name="InsightsReminder__invite">Zaproś</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ikona transportu</string>
-  <string name="ConversationListFragment_loading">Ładowanie…</string>
+  <string name="ConversationListFragment_loading">Wczytywanie…</string>
   <string name="CallNotificationBuilder_connecting">Łączenie…</string>
   <string name="Permissions_permission_required">Wymagane uprawnienia</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal wymaga pozwolenia na dostęp do wiadomości SMS w celu wysyłania wiadomości SMS, ale zostało one na stałe odrzucone. Przejdź do ustawień aplikacji, wybierz \"Uprawnienia\" i włącz \"SMS\".</string>
@@ -1380,7 +1401,7 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="RegistrationActivity_restore">Przywróć</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Nie udało się zaimportować kopii zapasowej z nowszej wersji Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Nieprawidłowe hasło kopii zapasowej</string>
-  <string name="RegistrationActivity_checking">Sprawdzam…</string>
+  <string name="RegistrationActivity_checking">Sprawdzanie…</string>
   <string name="RegistrationActivity_d_messages_so_far">%d wiadomości…</string>
   <string name="RegistrationActivity_restore_from_backup">Przywrócić kopię zapasową?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">Przywróć swoje wiadomości i multimedia z lokalnej kopii zapasowej. Jeśli nie zrobisz tego teraz, nie będzie można zrobić tego później.</string>
@@ -1446,5 +1467,6 @@ Otrzymano wiadomość wymiany klucz dla niepoprawnej wersji protokołu.</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">DOTKNIJ, ABY ODBLOKOWAĆ</string>
   <string name="RegistrationLockDialog_reminder">Przypomnienie:</string>
   <string name="recipient_preferences__about">O mnie</string>
+  <string name="Recipient_unknown">Nieznany</string>
   <!--EOF-->
 </resources>
