--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Sim</string>
   <string name="no">Não</string>
   <string name="delete">Eliminar</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nova mensagem</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">O Signal está a atualizar…</string>
   <!--ApplicationPreferencesActivity-->
@@ -1297,6 +1295,11 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="trimmer__deleting">A eliminar</string>
   <string name="trimmer__deleting_old_messages">A eliminar mensagens antigas…</string>
   <string name="trimmer__old_messages_successfully_deleted">Mensagens antigas eliminadas com sucesso</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">Cancelar</string>
+  <string name="InsightsDashboardFragment__send">Enviar</string>
+  <string name="FirstInviteReminder__title">Convite para o Signal</string>
+  <string name="InsightsReminder__invite">Convidar</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ícone de transporte</string>
   <string name="ConversationListFragment_loading">A carregar…</string>
@@ -1391,5 +1394,6 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="prompt_passphrase_activity__tap_to_unlock">TOQUE PARA DESBLOQUEAR</string>
   <string name="RegistrationLockDialog_reminder">Lembrete:</string>
   <string name="recipient_preferences__about">Sobre</string>
+  <string name="Recipient_unknown">Desconhecido</string>
   <!--EOF-->
 </resources>
