--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Ndio</string>
   <string name="no">Hapana</string>
   <string name="delete">Futa</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Ujumbe mpya</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+ %d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">Signal inasasishwa…</string>
   <!--ApplicationPreferencesActivity-->
@@ -1075,7 +1073,7 @@ nambari yako ya simu</string>
   <!--menus-->
   <!--****************************************-->
   <!--contact_selection_list-->
-  <string name="contact_selection_list__unknown_contact">Ujumbe mpya kuelekea..</string>
+  <string name="contact_selection_list__unknown_contact">Ujumbe mpya kuelekea…</string>
   <!--conversation_callable_insecure-->
   <string name="conversation_callable_insecure__menu_call">wito</string>
   <!--conversation_callable_secure-->
@@ -1175,6 +1173,11 @@ nambari yako ya simu</string>
   <string name="trimmer__deleting">Kufuta</string>
   <string name="trimmer__deleting_old_messages">futa ujumbe wa zamani</string>
   <string name="trimmer__old_messages_successfully_deleted">Ujumbe wa zamani umefutwa kwa ufanisi</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">futa</string>
+  <string name="InsightsDashboardFragment__send">tuma</string>
+  <string name="FirstInviteReminder__title">Mwalike kwenye Signal</string>
+  <string name="InsightsReminder__invite">Alika</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">icon ya usafiri</string>
   <string name="ConversationListFragment_loading">Inafunguka</string>
@@ -1266,5 +1269,6 @@ Funga ufikiaji wa Signal na lock ya Android au alama za vidole</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">Gusa kufungua</string>
   <string name="RegistrationLockDialog_reminder">Kumbusha</string>
   <string name="recipient_preferences__about">Kuhusu</string>
+  <string name="Recipient_unknown">Isiyojulikana</string>
   <!--EOF-->
 </resources>
