--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">Evet</string>
   <string name="no">Hayır</string>
   <string name="delete">Sil</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Yeni ileti</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">Signal güncelleniyor…</string>
   <!--ApplicationPreferencesActivity-->
@@ -30,7 +28,7 @@
   <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">Bu işlem Signal ve ileti bildirimlerinin kilidini kalıcı olarak açacaktır.</string>
   <string name="ApplicationPreferencesActivity_disable">Devre dışı bırak</string>
   <string name="ApplicationPreferencesActivity_unregistering">Kayıt siliniyor</string>
-  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Signal iletileri ve aramalarından kaydınız siliniyor…</string>
+  <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Signal ileti ve aramalarından kaydınız siliniyor…</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Signal iletilerini ve aramalarını devre dışı bırak?</string>
   <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Sunucudaki kaydınızı silerek Signal iletilerini ve aramalarını devre dışı bırakın. Bu özellikleri gelecekte yeniden kullanabilmeniz için telefon numaranızı tekrar kaydetmeniz gerekir.</string>
   <string name="ApplicationPreferencesActivity_error_connecting_to_server">Sunucuya bağlanırken hata!</string>
@@ -217,10 +215,10 @@
     <item quantity="other">%1$d eklenti kaydediliyor</item>
   </plurals>
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
-    <item quantity="one">Eklenti hafızaya kaydediliyor…</item>
-    <item quantity="other">%1$d eklenti hafızaya kaydediliyor…</item>
+    <item quantity="one">Eklenti depolamaya kaydediliyor…</item>
+    <item quantity="other">%1$d eklenti depolamaya kaydediliyor…</item>
   </plurals>
-  <string name="ConversationFragment_pending">Beklemede…</string>
+  <string name="ConversationFragment_pending">Bekleniyor…</string>
   <string name="ConversationFragment_push">Veri (Signal)</string>
   <string name="ConversationFragment_mms">MMS</string>
   <string name="ConversationFragment_sms">SMS</string>
@@ -244,7 +242,7 @@
     <item quantity="other">Bu işlem seçilmiş %1$d sohbeti kalıcı olarak silecektir.</item>
   </plurals>
   <string name="ConversationListFragment_deleting">Siliniyor</string>
-  <string name="ConversationListFragment_deleting_selected_conversations">Seçilen sohbetler siliniyor…</string>
+  <string name="ConversationListFragment_deleting_selected_conversations">Seçili sohbetler siliniyor…</string>
   <plurals name="ConversationListFragment_conversations_archived">
     <item quantity="one">Sohbet arşivlendi</item>
     <item quantity="other">%d sohbet arşivlendi</item>
@@ -289,7 +287,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">Bu cihazın bağlantısını kaldırarak, artık ileti alamayacak ya da gönderemeyeceksiniz.</string>
   <string name="DeviceListActivity_network_connection_failed">Ağ bağlantısı başarısız</string>
   <string name="DeviceListActivity_try_again">Tekrar dene</string>
-  <string name="DeviceListActivity_unlinking_device">Cihaz bağlantısı kaldırılıyor…</string>
+  <string name="DeviceListActivity_unlinking_device">Cihaz bağlantısı kesiliyor…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">Cihaz bağlantısı kaldırılıyor</string>
   <string name="DeviceListActivity_network_failed">Ağ bağlantısı başarısız oldu!</string>
   <!--DeviceListItem-->
@@ -352,7 +350,7 @@
   <string name="GroupCreateActivity_creating_group">%1$s oluşturuluyor…</string>
   <string name="GroupCreateActivity_updating_group">%1$s güncelleniyor…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">%1$s Signal kullanıcısı olmadığı için eklenemedi.</string>
-  <string name="GroupCreateActivity_loading_group_details">Grup ayrıntıları yükleniyor…</string>
+  <string name="GroupCreateActivity_loading_group_details">Grup detayları yükleniyor…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">Zaten gruptasınız.</string>
   <!--GroupShareProfileView-->
   <string name="GroupShareProfileView_share_your_profile_name_and_photo_with_this_group">Profil adınız ve fotoğrafınız bu grupla paylaşılsın mı?</string>
@@ -385,7 +383,7 @@
   <string name="InviteActivity_no_app_to_share_to">Paylaşmak için herhangi bir uygulamanız yok gibi görünüyor.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Arkadaşlar, arkadaşlarının şifresiz sohbet etmesine izin vermez.</string>
   <!--Job-->
-  <string name="Job_working_in_the_background">Arka planda çalışıyor…</string>
+  <string name="Job_working_in_the_background">Arkaplanda çalışılıyor…</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Gönderilemedi</string>
   <string name="MessageDetailsRecipient_new_safety_number">Yeni güvenlik numarası</string>
@@ -679,7 +677,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_an_old_version_of_signal">Kişiniz Signal\'in eski bir sürümünü kullanmakta. Güvenlik numaranızı doğrulamadan önce uygulamayı güncellemelerini rica edin.</string>
   <string name="VerifyIdentityActivity_your_contact_is_running_a_newer_version_of_Signal">Kişiniz Signal\'in uyumsuz karekod formatına sahip yeni bir sürümünü kullanıyor. Karşılaştırmak için lütfen güncelleyin.</string>
   <string name="VerifyIdentityActivity_the_scanned_qr_code_is_not_a_correctly_formatted_safety_number">Taranan karekod düzgün biçimlendirilmiş bir güvenlik numarası doğrulama kodu değil. Lütfen tekrar taramayı deneyin.</string>
-  <string name="VerifyIdentityActivity_share_safety_number_via">Güvenlik numarasını paylaş…</string>
+  <string name="VerifyIdentityActivity_share_safety_number_via">Güvenlik numarasını şununla paylaş…</string>
   <string name="VerifyIdentityActivity_our_signal_safety_number">Signal güvenlik numaramız:</string>
   <string name="VerifyIdentityActivity_no_app_to_share_to">Paylaşmak için herhangi bir uygulamanız yok gibi görünüyor. </string>
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">Panoda karşılaştırılacak bir güvenlik numarası bulunamadı</string>
@@ -967,7 +965,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">GÖRÜNTÜLE</string>
   <string name="message_recipients_list_item__resend">YENİDEN GÖNDER</string>
-  <string name="message_recipients_list_item__resending">Yeniden gönderiliyor…</string>
+  <string name="message_recipients_list_item__resending">Tekrar gönderiliyor…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="one">%1$s gruba katıldı.</item>
@@ -1300,10 +1298,15 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="trimmer__deleting">Siliniyor</string>
   <string name="trimmer__deleting_old_messages">Eski iletiler siliniyor…</string>
   <string name="trimmer__old_messages_successfully_deleted">Eski iletiler başarıyla silindi</string>
+  <!--Insights-->
+  <string name="InsightsDashboardFragment__cancel">İptal</string>
+  <string name="InsightsDashboardFragment__send">Gönder</string>
+  <string name="FirstInviteReminder__title">Signal\'e davet et</string>
+  <string name="InsightsReminder__invite">Davet et</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Ulaştırma simgesi</string>
   <string name="ConversationListFragment_loading">Yükleniyor…</string>
-  <string name="CallNotificationBuilder_connecting">Bağlanılıyor…</string>
+  <string name="CallNotificationBuilder_connecting">Bağlanıyor…</string>
   <string name="Permissions_permission_required">İzin gerekli</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal, SMS göndermek için SMS iznine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Lütfen uygulama ayarları menüsüne girip \"İzinler\" kısmını seçin, ve \"SMS\"i etkinleştirin.</string>
   <string name="Permissions_continue">Devam Et</string>
@@ -1329,7 +1332,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Signal\'in daha yeni sürümlerinden yedek alınamaz</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Yedek parolası yanlış</string>
   <string name="RegistrationActivity_checking">Kontrol ediliyor…</string>
-  <string name="RegistrationActivity_d_messages_so_far">Şu ana kadar %d ileti….</string>
+  <string name="RegistrationActivity_d_messages_so_far">Şu ana kadar %d ileti…</string>
   <string name="RegistrationActivity_restore_from_backup">Yedekten geri yüklensin mi?</string>
   <string name="RegistrationActivity_restore_your_messages_and_media_from_a_local_backup">İleti ve ileti içeriklerinizi yerel bir yedekten geri yükleyin. Eğer şimdi yüklemezseniz, daha sonra yükleyemezsiniz.</string>
   <string name="RegistrationActivity_backup_size_s">Yedek boyutu: %s</string>
@@ -1394,5 +1397,6 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="prompt_passphrase_activity__tap_to_unlock">AÇMAK İÇİN DOKUNUN</string>
   <string name="RegistrationLockDialog_reminder">Hatırlatma:</string>
   <string name="recipient_preferences__about">Hakkında</string>
+  <string name="Recipient_unknown">Bilinmeyen</string>
   <!--EOF-->
 </resources>
