--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1,6 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <!-- Removed by excludeNonTranslatables <string name="app_name">Signal</string> -->
   <string name="yes">是</string>
   <string name="no">否</string>
   <string name="delete">删除</string>
@@ -10,7 +9,6 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">新信息</string>
   <!--AlbumThumbnailView-->
-  <!-- Removed by excludeNonTranslatables <string name="AlbumThumbnailView_plus">\+%d</string> -->
   <!--ApplicationMigrationActivity-->
   <string name="ApplicationMigrationActivity__signal_is_updating">Signal 正在更新…</string>
   <!--ApplicationPreferencesActivity-->
@@ -61,7 +59,7 @@
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal 需要\"相机\"权限才能拍照并发送相片，但是该权限已被永久禁用。请转到系统的应用设置菜单，找到权限设置，选择 Signal 应用，并启用\"相机\"权限。</string>
   <!--AttachmentUploadJob-->
   <string name="AttachmentUploadJob_uploading_media">上传媒体中…</string>
-  <string name="AttachmentUploadJob_compressing_video_start">正在压缩视频…</string>
+  <string name="AttachmentUploadJob_compressing_video_start">压缩视频中…</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">播放音频时出现错误！</string>
   <!--BlockedContactsActivity-->
@@ -210,7 +208,7 @@
   <plurals name="ConversationFragment_saving_n_attachments_to_sd_card">
     <item quantity="other">正在保存 %1$d 附件到存储…</item>
   </plurals>
-  <string name="ConversationFragment_pending">待定…</string>
+  <string name="ConversationFragment_pending">等待中…</string>
   <string name="ConversationFragment_push">数据（ Signal ）</string>
   <string name="ConversationFragment_mms">彩信</string>
   <string name="ConversationFragment_sms">短信</string>
@@ -275,7 +273,7 @@
   <string name="DeviceListActivity_by_unlinking_this_device_it_will_no_longer_be_able_to_send_or_receive">如果断开此设备的连接，它将不能再接受或发送信息。</string>
   <string name="DeviceListActivity_network_connection_failed">网络连接失败</string>
   <string name="DeviceListActivity_try_again">再试一次</string>
-  <string name="DeviceListActivity_unlinking_device">正在断开设备…</string>
+  <string name="DeviceListActivity_unlinking_device">取消关联设备中…</string>
   <string name="DeviceListActivity_unlinking_device_no_ellipsis">正在断开设备</string>
   <string name="DeviceListActivity_network_failed">网络失败！</string>
   <!--DeviceListItem-->
@@ -336,7 +334,7 @@
   <string name="GroupCreateActivity_avatar_content_description">群组头像</string>
   <string name="GroupCreateActivity_menu_apply_button">应用</string>
   <string name="GroupCreateActivity_creating_group">正在创建群组 %1$s…</string>
-  <string name="GroupCreateActivity_updating_group">更新中… %1$s</string>
+  <string name="GroupCreateActivity_updating_group">正在更新 %1$s…</string>
   <string name="GroupCreateActivity_cannot_add_non_push_to_existing_group">无法添加 %1$s，因为他们不是 Signal 用户。</string>
   <string name="GroupCreateActivity_loading_group_details">读取群组详情…</string>
   <string name="GroupCreateActivity_youre_already_in_the_group">你已在此群组中。</string>
@@ -355,7 +353,7 @@
   <string name="InviteActivity_share">共享</string>
   <string name="InviteActivity_choose_contacts">选择联系人</string>
   <string name="InviteActivity_cancel">取消</string>
-  <string name="InviteActivity_sending">正在发送…</string>
+  <string name="InviteActivity_sending">发送中…</string>
   <string name="InviteActivity_heart_content_description">心</string>
   <string name="InviteActivity_invitations_sent">邀请已发送！</string>
   <string name="InviteActivity_invite_to_signal">邀请至 Signal </string>
@@ -461,7 +459,7 @@
 •阅读您的所有信息
 \n•以您的名义发送信息</string>
   <string name="DeviceProvisioningActivity_content_progress_title">正在连接设备</string>
-  <string name="DeviceProvisioningActivity_content_progress_content">正在连接新设备</string>
+  <string name="DeviceProvisioningActivity_content_progress_content">关联新设备中…</string>
   <string name="DeviceProvisioningActivity_content_progress_success">成功认可设备！</string>
   <string name="DeviceProvisioningActivity_content_progress_no_device">没有找到设备。</string>
   <string name="DeviceProvisioningActivity_content_progress_network_error">网络错误。</string>
@@ -937,7 +935,7 @@
   <!--message_recipients_list_item-->
   <string name="message_recipients_list_item__view">查看</string>
   <string name="message_recipients_list_item__resend">重新发送</string>
-  <string name="message_recipients_list_item__resending">正在重新发送…</string>
+  <string name="message_recipients_list_item__resending">正在重发…</string>
   <!--GroupUtil-->
   <plurals name="GroupUtil_joined_the_group">
     <item quantity="other">%1$s 加入了群组。</item>
@@ -988,7 +986,7 @@
   <!--verify_display_fragment-->
   <string name="verify_display_fragment__if_you_wish_to_verify_the_security_of_your_end_to_end_encryption_with_s"><![CDATA[如果您希望验证和 %s之间通信加密的安全性 ，请将上方数字与对方设备上的对比。您还可以扫描对方手机上的二维码，或让对方扫描你的二维码。<a href="https://signal.org/redirect/safety-numbers">了解更多</a>]]></string>
   <string name="verify_display_fragment__tap_to_scan">点击扫码</string>
-  <string name="verify_display_fragment__loading">载入中…</string>
+  <string name="verify_display_fragment__loading">加载中…</string>
   <string name="verify_display_fragment__verified">已验证</string>
   <!--verify_identity-->
   <string name="verify_identity__share_safety_number">分享安全代码</string>
@@ -1268,10 +1266,16 @@
   <string name="trimmer__deleting">正在删除</string>
   <string name="trimmer__deleting_old_messages">正在删除旧信息…</string>
   <string name="trimmer__old_messages_successfully_deleted">旧信息已被成功删除。</string>
+  <!--Insights-->
+  <string name="Insights__percent">%</string>
+  <string name="InsightsDashboardFragment__cancel">取消</string>
+  <string name="InsightsDashboardFragment__send">发送</string>
+  <string name="FirstInviteReminder__title">邀请至 Signal</string>
+  <string name="InsightsReminder__invite">邀请</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">传输图标</string>
-  <string name="ConversationListFragment_loading">载入中…</string>
-  <string name="CallNotificationBuilder_connecting">连接中……</string>
+  <string name="ConversationListFragment_loading">加载中…</string>
+  <string name="CallNotificationBuilder_connecting">链接中…</string>
   <string name="Permissions_permission_required">需要相应权限</string>
   <string name="ConversationActivity_signal_needs_sms_permission_in_order_to_send_an_sms">Signal 需要短信权限以发送短信，但是该权限已经被永久拒绝。请进入应用程序设置，点击权限，并启用“短信”。</string>
   <string name="Permissions_continue">继续</string>
@@ -1362,5 +1366,6 @@
   <string name="prompt_passphrase_activity__tap_to_unlock">轻触解锁</string>
   <string name="RegistrationLockDialog_reminder">提醒：</string>
   <string name="recipient_preferences__about">关于</string>
+  <string name="Recipient_unknown">未知</string>
   <!--EOF-->
 </resources>
